need ng book appoint

--- a/app/src/main/res/layout/activity_pending_appointment.xml
+++ b/app/src/main/res/layout/activity_pending_appointment.xml
@@ -22,7 +22,7 @@
             <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src="@drawable/logo_green" />
+                android:src="@drawable/logo_white" />
 
             <TextView
                 android:layout_width="160dp"
