--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -87,6 +87,7 @@
                 app:boxStrokeColor="@color/black"> <!-- Visible border color -->
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/username"
                     android:paddingBottom="22dp"
                     android:textSize="18dp"
                     android:textStyle="italic"
@@ -105,6 +106,7 @@
                 app:endIconMode="password_toggle">  <!-- Enable the password toggle eye icon -->
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/password"
                     android:paddingBottom="22dp"
                     android:textSize="18dp"
                     android:textStyle="italic"
@@ -138,6 +140,13 @@
                 android:layout_width="115dp"
                 android:layout_height="50dp"
                 android:textAllCaps="false"/>
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone" />
 
 
             <LinearLayout
