--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -59,9 +59,10 @@
                     app:boxStrokeColor="@color/black"> <!-- Visible border color -->
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/FullName"
                         android:paddingBottom="22dp"
                         android:textSize="12dp"
-                        android:textStyle="italic"
+
                         android:textAlignment="center"
                         android:gravity="center"
                         android:hint="Full Name (ex. Juan Dela Cruz)"
@@ -81,6 +82,7 @@
 
                     <!-- Age Input -->
                     <EditText
+                        android:id="@+id/Age"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -93,6 +95,7 @@
 
                     <!-- Gender Dropdown (Spinner) -->
                     <Spinner
+                        android:id="@+id/sex_picker"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -120,9 +123,10 @@
                     app:boxStrokeColor="@color/black"> <!-- Visible border color -->
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/Username"
                         android:paddingBottom="22dp"
                         android:textSize="13dp"
-                        android:textStyle="italic"
+
                         android:textAlignment="center"
                         android:gravity="center"
                         android:hint="Username"
@@ -136,9 +140,10 @@
                     app:boxStrokeColor="@color/black"> <!-- Visible border color -->
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/Email"
                         android:paddingBottom="22dp"
                         android:textSize="13dp"
-                        android:textStyle="italic"
+
                         android:textAlignment="center"
                         android:gravity="center"
                         android:fontFamily="sans-serif"
@@ -184,9 +189,10 @@
                     app:endIconMode="password_toggle">  <!-- Enable the password toggle eye icon -->
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/Password"
                         android:paddingBottom="22dp"
                         android:textSize="13dp"
-                        android:textStyle="italic"
+
                         android:textAlignment="center"
                         android:gravity="center"
                         android:hint="Password"
@@ -195,7 +201,12 @@
                         android:inputType="textPassword"/>
                 </com.google.android.material.textfield.TextInputLayout>
 
-
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:visibility="gone" />
 
                 <Button
                     android:layout_marginTop="30dp"
@@ -238,6 +249,8 @@
 
 
                 </LinearLayout>
+
+
 
 
 
